# MaltAI

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  run_agent.py
backend/: main.py
backend/api/: __init__.py  routes.py  websocket.py
backend/api/services/: agent_service.py
docs/: IDEACAO.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  ChatSession.tsx
frontend/src/services/: audioService.ts
src/maltai_agent/: __init__.py  audio.py  configuration.py  graph.py  prompts.py  state.py
src/maltai_agent/tools/: __init__.py  instructions_tool.py  memory_tool.py  profile_tool.py  todo_tool.py
tests/: test_audio.py
tests/integration_tests/: test_graph.py
